.provarCaches/00D5f000005vwGkEAI/objects/rstk__sochgwarr__c.object
<CustomObject>
    <description>sochgwarr__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>LEFT(rstk__sochgwarr_socontchg__r.rstk__externalid__c &amp; &apos; - &apos; &amp; rstk__sochgwarr_soline__r.rstk__externalid__c, 50)</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(rstk__sochgwarr_socontchg__r.Name &amp; &apos; - &apos; &amp; rstk__sochgwarr_soline__r.Name, 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sochgwarr_socontchg__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Contract Charge</label>
        <referenceTo>rstk__socontchg__c</referenceTo>
        <relationshipLabel>Contract Charge Covered Items</relationshipLabel>
        <relationshipName>sochgwarrs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sochgwarr_soline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Covered SO Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Contract Charge Covered Items</relationshipLabel>
        <relationshipName>sochgwarrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sochgwarr_sowarr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Covered Item</label>
        <referenceTo>rstk__sowarr__c</referenceTo>
        <relationshipLabel>Contract Charge Covered Items</relationshipLabel>
        <relationshipName>sochgwarrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Contract_Charge_Covered_Items</fullName>
        <columns>NAME</columns>
        <columns>rstk__sochgwarr_sowarr__c</columns>
        <columns>rstk__sochgwarr_soline__c</columns>
        <columns>rstk__sochgwarr_socontchg__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Charge Covered Items</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Charge Covered Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>